# MachineLearningTask

Neirous/: CMakeLists.txt
Neirous/Neirous/: CMakeLists.txt  Neirous.cpp
k-neighboorhood/: CMakeLists.txt
k-neighboorhood/k-neighboorhood/: CMakeLists.txt  k-neighboorhood.cpp  k-neighboorhood.h
