# CMakeList.txt: проект CMake для Neirous; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.20)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (Neirous "Neirous.cpp" )

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
