# CMakeList.txt: проект CMake для k-neighboorhood; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (k-neighboorhood "k-neighboorhood.cpp" "k-neighboorhood.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
